# schema/openapi/openapi.yaml
@@ -3390,6 +3390,7 @@ components:
         - company_id
         - name
         - currency
+        - tax_rate
         - allow_discount
         - is_active
         - metadata
@@ -3430,6 +3431,12 @@ components:
           nullable: true
           type: string
           format: uuid
+        tax_account_id:
+          nullable: true
+          type: string
+          format: uuid
+        tax_rate:
+          type: string
         allow_discount:
           type: boolean
         is_active:
@@ -3456,6 +3463,7 @@ components:
         - company_id
         - name
         - currency
+        - tax_rate
         - allow_discount
         - is_active
         - metadata
@@ -3493,6 +3501,12 @@ components:
           nullable: true
           type: string
           format: uuid
+        tax_account_id:
+          nullable: true
+          type: string
+          format: uuid
+        tax_rate:
+          type: string
         allow_discount:
           type: boolean
         is_active:
@@ -3506,6 +3520,7 @@ components:
         - company_id
         - name
         - currency
+        - tax_rate
         - allow_discount
         - is_active
         - metadata
@@ -3543,6 +3558,12 @@ components:
           nullable: true
           type: string
           format: uuid
+        tax_account_id:
+          nullable: true
+          type: string
+          format: uuid
+        tax_rate:
+          type: string
         allow_discount:
           type: boolean
         is_active:
@@ -3586,6 +3607,12 @@ components:
           nullable: true
           type: string
           format: uuid
+        tax_account_id:
+          nullable: true
+          type: string
+          format: uuid
+        tax_rate:
+          type: string
         allow_discount:
           type: boolean
         is_active:
